--- a/pom.xml
+++ b/pom.xml
@@ -37,51 +37,33 @@
 			<version>2.27</version>
 		</dependency>
 
-<dependency>
-	<groupId>org.glassfish.jersey.containers</groupId>
-	<artifactId>jersey-container-servlet</artifactId>
-	<version>2.27</version>
-</dependency>
+		<dependency>
+			<groupId>org.glassfish.jersey.containers</groupId>
+			<artifactId>jersey-container-servlet</artifactId>
+			<version>2.27</version>
+		</dependency>
 
-<dependency>
-	<groupId>org.glassfish.jersey.inject</groupId>
-	<artifactId>jersey-hk2</artifactId>
-	<version>2.27</version>
-</dependency>
+		<dependency>
+			<groupId>org.glassfish.jersey.inject</groupId>
+			<artifactId>jersey-hk2</artifactId>
+			<version>2.27</version>
+		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
+		<!-- this is needed to get the @Context HttpServletResponse resp in the jersey service methods -->
+		<dependency>
+		    <groupId>javax.servlet</groupId>
+		    <artifactId>javax.servlet-api</artifactId>
+		    <version>4.0.1</version>
+		    <scope>provided</scope>
+		</dependency>
 
-<!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
-<!-- this is needed to get the @Context HttpServletResponse resp in the jersey service methods -->
-<dependency>
-    <groupId>javax.servlet</groupId>
-    <artifactId>javax.servlet-api</artifactId>
-    <version>4.0.1</version>
-    <scope>provided</scope>
-</dependency>
-
-
-<!-- <dependency> -->
-<!-- 	<groupId>org.springframework</groupId> -->
-<!-- 	<artifactId>spring-core</artifactId> -->
-<!-- 	<version>5.1.0.RELEASE</version> -->
-<!-- </dependency> -->
-<dependency>
-	<groupId>org.springframework</groupId>
-	<artifactId>spring-context</artifactId>
-	<version>5.1.0.RELEASE</version>
-</dependency>
-<!-- <dependency> -->
-<!-- 	<groupId>org.springframework</groupId> -->
-<!-- 	<artifactId>spring-context-support</artifactId> -->
-<!-- 	<version>5.1.0.RELEASE</version> -->
-<!-- </dependency> -->
-<dependency>
-	<groupId>org.springframework</groupId>
-	<artifactId>spring-web</artifactId>
-	<version>5.1.0.RELEASE</version>
-</dependency>
-
-
+		
+		<dependency>
+		    <groupId>com.google.code.gson</groupId>
+		    <artifactId>gson</artifactId>
+		    <version>2.8.5</version>
+		</dependency>
 	</dependencies>
 
 	<build>
