--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,10 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.pilotprogrammer.common</groupId>
-	<artifactId>PdfBoxServer</artifactId>
+	<artifactId>JerseyFileService</artifactId>
 	<packaging>war</packaging>
 	<version>1.0-SNAPSHOT</version>
-	<name>PdfBoxServer Maven Webapp</name>
+	<name>JerseyFileService Maven Webapp</name>
 	<url>http://maven.apache.org</url>
 
 	<repositories>
@@ -20,36 +20,25 @@
 
 	<dependencies>
 		<dependency>
-		    <groupId>org.apache.pdfbox</groupId>
-		    <artifactId>pdfbox</artifactId>
-		    <version>2.0.12</version>
-		</dependency>
-
-		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>2.6</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.glassfish.jersey.core</groupId>
 			<artifactId>jersey-server</artifactId>
 			<version>2.27</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.glassfish.jersey.containers</groupId>
 			<artifactId>jersey-container-servlet</artifactId>
 			<version>2.27</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.glassfish.jersey.inject</groupId>
 			<artifactId>jersey-hk2</artifactId>
 			<version>2.27</version>
 		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
 		<!-- this is needed to get the @Context HttpServletResponse resp in the jersey service methods -->
 		<dependency>
 		    <groupId>javax.servlet</groupId>
@@ -57,17 +46,14 @@
 		    <version>4.0.1</version>
 		    <scope>provided</scope>
 		</dependency>
-
-		
 		<dependency>
 		    <groupId>com.google.code.gson</groupId>
 		    <artifactId>gson</artifactId>
 		    <version>2.8.5</version>
 		</dependency>
 	</dependencies>
-
 	<build>
-		<finalName>PdfBoxServer</finalName>
+		<finalName>JerseyFileService</finalName>
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
